import SwiftUI

enum ServiceStatus: String, CaseIterable {
    case overdue = "Overdue"
    case dueSoon = "Soon"
    case good = "Good"
    case all = "All"
}

struct ServiceView: View {
    @Environment(\.managedObjectContext) private var viewContext
    @EnvironmentObject var stravaService: StravaService
    @EnvironmentObject var viewModel: ServiceViewModel
...
                            Task {
                                await BackgroundTaskManager.shared.executeTaskLogicForTesting(identifier: .checkServiceInterval)
                            }
                        }
                        .font(.caption2)
                        .foregroundColor(.clear) // Hidden but accessible
                        .accessibilityIdentifier("TestBackgroundTask")
                    }
                    addButton
                }
            )
            .sheet(isPresented: $showingServiceIntervalView, onDismiss: {
                viewModel.loadServiceIntervals()
...
